tests/compilefail30.pas
program compilefail30(output);
{cannot define a constant using an expression}

const two = 1 + 1;


begin
	writeln(two);

end.
